# mlops2025w_142502006

./: output.txt  sum_rev1.sh
.ipynb_checkpoints/: assignment 5-checkpoint.ipynb
assignment/assignment 1/: 142502006_prog_1.sh  142502006_prog_2.sh  142502006_prog_3.sh  142502006_prog_4.sh  142502006_prog_5.sh
assignment/assignment 2/docs/: usage.md
assignment/assignment 2/src/: calculator.py
assignment/assignment 3/: pyproject.toml  question3.py
assignment/assignment 4/: Q1.py  Q2.py  Q3.py  Q4.py  retail.db
assignment/assignment 5/: assignment 5.ipynb
assignment/git-assignment-142502006/: README.md
assignment/git-assignment-142502006/src/: utils.py
class/: read.txt
class/class 1/: sum.sh
class/class 2/: pyproject.toml
class/class 5/: model.pkl
class/class 5/.ipynb_checkpoints/: wandb_cloud_deploy_lab_detailed-checkpoint.ipynb
class/class 5/artifacts/iris-rf-v4/: model.pkl
class/class 5/wandb/: latest-run
class/class 7/: mlops_wandb_monitoring_lab.ipynb  rf_model.joblib
class/class 7/.ipynb_checkpoints/: mlops_wandb_monitoring_lab-checkpoint.ipynb
class/class 7/wandb/: latest-run
class/class 7/wandb/run-20251028_100013-8j4e5tr6/: run-8j4e5tr6.wandb
class/class 7/wandb/run-20251028_100732-ivl1be96/: run-ivl1be96.wandb
class/class 7/wandb/run-20251028_100859-d8u0vdvs/: run-d8u0vdvs.wandb
class/week 10/: wandb_cloud_deploy_lab_detailed.ipynb
class/week 10/app/: main.py  requirements.txt
class/week11/: cifar100_wandb_hf (1).ipynb
class/week4/: main.py
class/week9/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
(+42 files in other folders)
